--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,3 +16,16 @@ body {
 .theme-showcase .navbar .container {
     width: auto;
 }
+
+
+
+.bs-callout-warning {
+    border-left-color: #aa6708;
+}
+.bs-callout {
+    padding: 20px;
+    margin: 20px 0;
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 3px;
+}
